manifests/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kompose-spring-cloud-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kompose-spring-cloud-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kompose-spring-cloud-network: "true"
